-- Channels テーブル
CREATE TABLE Channels (
  チャンネルID bigint(20) NOT NULL PRIMARY KEY AUTO_INCREMENT,
  チャンネル名 varchar(100)
);

-- ProgramCategories テーブル
CREATE TABLE ProgramCategories (
  番組カテゴリID bigint(20) NOT NULL PRIMARY KEY AUTO_INCREMENT,
  番組カテゴリ名 varchar(100)
);

-- Contents テーブル
CREATE TABLE Contents (
  コンテンツID bigint(20) NOT NULL PRIMARY KEY AUTO_INCREMENT,
  コンテンツ名 varchar(100),
  総エピソード数 bigint(20),
  総シーズン数 bigint(20),
  作品詳細 varchar(255)
);

-- Programs テーブル
CREATE TABLE Programs (
  番組ID bigint(20) NOT NULL PRIMARY KEY AUTO_INCREMENT,
  番組名 varchar(100),
  番組カテゴリID bigint(20),
  番組詳細 varchar(255),
  放送チャンネルID bigint(20),
  放送開始時間 datetime,
  放送終了時間 datetime,
  番組再生数 bigint(20),
  コンテンツID bigint(20),
  シーズンID bigint(20),
  エピソードID bigint(20)
);

-- Episodes テーブル
CREATE TABLE Episodes (
  エピソードID bigint(20) NOT NULL PRIMARY KEY AUTO_INCREMENT,
  コンテンツID bigint(20),
  コンテンツ名 varchar(100),
  シーズンID bigint(20),
  エピソード数 bigint(20),
  エピソード名 varchar(100),
  エピソード詳細 varchar(255),
  動画時間 time,
  公開日 date,
  再生数 bigint(20),
  放送番組ID bigint(20)
);

-- Seasons テーブル
CREATE TABLE Seasons (
  シーズンID bigint(20) NOT NULL PRIMARY KEY AUTO_INCREMENT,
  シーズン名 varchar(100),
  総エピソード数 bigint(20)
);

-- 外部キー制約の設定
ALTER TABLE Programs
ADD FOREIGN KEY (番組カテゴリID) REFERENCES ProgramCategories (番組カテゴリID);

ALTER TABLE Programs
ADD FOREIGN KEY (放送チャンネルID) REFERENCES Channels (チャンネルID);

ALTER TABLE Programs
ADD FOREIGN KEY (コンテンツID) REFERENCES Contents (コンテンツID);

ALTER TABLE Programs
ADD FOREIGN KEY (シーズンID) REFERENCES Seasons (シーズンID);

ALTER TABLE Programs
ADD FOREIGN KEY (エピソードID) REFERENCES Episodes (エピソードID);

ALTER TABLE Episodes
ADD FOREIGN KEY (コンテンツID) REFERENCES Contents (コンテンツID);

ALTER TABLE Episodes
ADD FOREIGN KEY (シーズンID) REFERENCES Seasons (シーズンID);

ALTER TABLE Episodes
ADD FOREIGN KEY (放送番組ID) REFERENCES Programs (番組ID);



INSERT INTO Channels (チャンネル名) VALUES
('テレビ東京'),
('日本テレビ'),
('TBS'),
('フジテレビ'),
('NHK総合'),
('テレビ朝日'),
('WOWOW'),
('BS11'),
('BSフジ'),
('スペースシャワーTV');


INSERT INTO Contents (コンテンツ名, 総エピソード数, 総シーズン数, 作品詳細) VALUES
('ブレイキング・バッド', 62, 5, '高校の化学教師がメタンフェタミンの帝王になる物語。'),
('ゲーム・オブ・スローンズ', 73, 8, '七つの名家がウェステロスの王座を巡って争うファンタジー物語。'),
('ザ・クラウン', 40, 5, 'エリザベス2世女王の治世を描いた歴史ドラマ。'),
('ストレンジャー・シングス', 25, 3, '小さな町で起きる超常現象を追う物語。'),
('ウィッチャー', 8, 2, '魔法と怪物の世界でモンスターハンターが活躍するファンタジー。'),
('ブラックミラー', 22, 5, '異なるストーリーを持つシリーズ。'),
('ザ・マンダロリアン', 16, 2, '銀河系の辺境で孤独なガンファイターが冒険する物語。'),
('シャーロック', 13, 4, 'アーサー・コナン・ドイルの名作を現代にアレンジ。'),
('ナルコス', 30, 3, '麻薬王パブロ・エスコバルの台頭と転落を描く。'),
('フレンズ', 236, 10, 'ニューヨークでの6人の友達の日常。');

INSERT INTO Contents (コンテンツ名, 総エピソード数, 総シーズン数, 作品詳細) VALUES
('きみはペット', 16, 1, '都会で孤独なOLがペットとして男性を飼うストーリー。'),
('半沢直樹', 10, 1, '銀行員が不正を暴くビジネスドラマ。'),
('麒麟がくる', 50, 1, '戦国時代の武将、豊臣秀吉の生涯を描く大河ドラマ。'),
('ごちそうさん', 151, 1, '日本の食文化をテーマにしたドラマ。'),
('相棒', 382, 1, '刑事ドラマで、主人公たちが難事件を解決する。'),
('ノーサイド・ゲーム', 10, 1, '参加者が命をかけてゲームに挑むリアルサバイバルショー。'),
('金曜ロードSHOW!', 5000, 1, '映画やアニメ、特別番組が放送される番組枠。'),
('鉄腕DASH', 500, 1, '日本全国を旅しながら食文化や伝統を紹介するバラエティ番組。'),
('もやしもん', 22, 1, '農業をテーマにしたアニメ。');

INSERT INTO Contents (コンテンツ名, 総エピソード数, 総シーズン数, 作品詳細) VALUES
('鬼滅の刃', 26, 1, '鬼に家族を皆殺しにされた少年が鬼殺隊に加わる冒険アニメ。'),
('プロ野球中継', 162, 1, 'プロ野球の試合を生中継するスポーツ番組。'),
('死役所', 8, 1, '死後の世界を舞台にしたファンタジードラマ。'),
('ワンピース', 1000, 1, '海賊王を目指すルフィと仲間たちの冒険アニメ。'),
('おしん', 151, 1, '昭和時代を背景にした家族ドラマ。'),
('名探偵コナン', 1100, 1, '高校生探偵が様々な事件を解決するミステリーアニメ。'),
('獣になれない私たち', 12, 1, '独身の女性たちの恋愛ドラマ。'),
('駐在さん', 30, 1, '田舎の駐在巡査と村の人々のほのぼのドラマ。'),
('冴えない彼女の育てかた', 25, 1, 'ゲーム制作を題材にしたラブコメアニメ。'),
('進撃の巨人', 75, 1, '巨人との戦いを描いたダークファンタジーアニメ。');



INSERT INTO Programcategories (番組カテゴリ名) VALUES
('ドラマ'),
('アニメ'),
('スポーツ'),
('バラエティ'),
('ニュース'),
('ドキュメンタリー'),
('音楽'),
('映画'),
('教育'),
('その他');













-- Programs テーブルに50個のサンプルデータを挿入
INSERT INTO Programs (番組名, 番組カテゴリID, 番組詳細, 放送チャンネルID, 放送開始時間, 放送終了時間, 番組再生数, コンテンツID, シーズンID, エピソードID) VALUES
('ドラマA', 1, '感動のドラマ', 1, '2023-11-03 20:00:00', '2023-11-03 21:00:00', 5000, 1, 1, 1),
('バラエティ番組X', 2, '笑いあり涙あり', 2, '2023-11-04 19:30:00', '2023-11-04 21:00:00', 8000, 2, 2, 2),
('報道番組Y', 3, '最新のニュース', 3, '2023-11-05 18:00:00', '2023-11-05 18:30:00', 3000, 3, 1, 3),
('スポーツ中継Z', 4, 'プロ野球中継', 1, '2023-11-06 14:00:00', '2023-11-06 17:00:00', 10000, 4, 2, 4),
('アニメB', 2, '冒険アニメ', 4, '2023-11-07 17:30:00', '2023-11-07 18:30:00', 6000, 5, 3, 5),
('バラエティ番組A', 2, 'トークショー', 3, '2023-11-08 21:00:00', '2023-11-08 22:30:00', 7500, 6, 1, 6),
('ドキュメンタリー番組C', 5, '歴史の探求', 1, '2023-11-09 19:00:00', '2023-11-09 20:30:00', 4500, 7, 2, 7),
('ドラマD', 1, 'サスペンスドラマ', 2, '2023-11-10 22:00:00', '2023-11-10 23:00:00', 5600, 8, 1, 8),
('トーク番組E', 2, 'ゲストトーク', 5, '2023-11-11 18:30:00', '2023-11-11 19:30:00', 3500, 9, 3, 9),
('バラエティ番組B', 2, 'クイズショー', 4, '2023-11-12 20:00:00', '2023-11-12 21:30:00', 7000, 10, 1, 10),
('報道番組X', 3, '政治の話題', 1, '2023-11-13 17:00:00', '2023-11-13 17:30:00', 3200, 11, 2, 11),
('アニメY', 2, 'ファンタジーアニメ', 4, '2023-11-14 16:30:00', '2023-11-14 17:30:00', 6800, 12, 1, 12),
('スポーツ中継A', 4, 'サッカー中継', 6, '2023-11-15 15:00:00', '2023-11-15 18:00:00', 9000, 13, 2, 13),
('バラエティ番組C', 2, 'バラエティショー', 2, '2023-11-16 19:00:00', '2023-11-16 20:30:00', 7200, 14, 1, 14),
('トーク番組F', 2, 'ライフスタイルトーク', 5, '2023-11-17 22:00:00', '2023-11-17 23:00:00', 3800, 15, 3, 15),
('ドキュメンタリー番組A', 5, '自然の美', 3, '2023-11-18 21:00:00', '2023-11-18 22:30:00', 4900, 16, 1, 16),
('ドラマE', 1, 'ファミリードラマ', 2, '2023-11-19 20:00:00', '2023-11-19 21:00:00', 5200, 17, 2, 17),
('バラエティ番組D', 2, 'クイズバトル', 6, '2023-11-20 18:30:00', '2023-11-20 19:30:00', 6800, 18, 1, 18),
('報道番組Z', 3, '国際ニュース', 1, '2023-11-21 15:00:00', '2023-11-21 15:30:00', 3100, 19, 2, 19),
('アニメA', 2, '学園アニメ', 4, '2023-11-22 18:00:00', '2023-11-22 19:00:00', 6400, 20, 1, 20);


